# HumbleFS

./: .gitignore  HUMBLEFS_IMPLEMENTATION_NOTES.md  HUMBLEFS_SPEC.md  LICENCE  README.md  humblefs.toml  pyproject.toml
humblefs/: __init__.py  app.py
tests/: test_app.py
