[project]
name = "humblefs"
version = "0.1.0"
description = "Minimal S3-like filesystem-backed storage"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "python-multipart>=0.0.21",
  "uvicorn>=0.27",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
